  buffer overflow, which could be exploited to achieve escalated
  privileges.  This flaw was introduced in glibc 2.34.

  CVE-2025-0395: When the assert() function fails, it does not allocate
  enough space for the assertion failure message string and size
  information, which may lead to a buffer overflow if the message string
  size aligns to page size.

The following bugs are resolved with this release:

  [27821] ungetc: Fix backup buffer leak on program exit
  [29039] Corrupt DTV after reuse of a TLS module ID following dlclose with unused TLS
  [30081] resolv: Do not wait for non-existing second DNS response after error
  [30694] The iconv program no longer tells the user which given encoding name was wrong
  [30709] nscd fails to build with cleanup handler if built with -fexceptions
  [30721] x86_64: Fix build with --disable-multiarch
  [30723] posix_memalign repeatedly scans long bin lists
  [30745] Slight bug in cache info codes for x86
  [30789] sem_open will fail on multithreaded scenarios when semaphore
    file doesn't exist (O_CREAT)
  [30804] F_GETLK, F_SETLK, and F_SETLKW value change for powerpc64 with
    -D_FILE_OFFSET_BITS=64
  [30842] Stack read overflow in getaddrinfo in no-aaaa mode (CVE-2023-4527)
  [30843] potential use-after-free in getcanonname (CVE-2023-4806)
  [31183] Wide stream buffer size reduced MB_LEN_MAX bytes after bug 17522 fix
  [31184] FAIL: elf/tst-tlsgap
  [31185] Incorrect thread point access in _dl_tlsdesc_undefweak and _dl_tlsdesc_dynamic
  [31476] resolv: Track single-request fallback via _res._flags
  [31890] resolv: Allow short error responses to match any DNS query
  [31943] _dl_find_object can fail if ld.so contains gaps between load segments
  [31965] rseq extension mechanism does not work as intended
  [31968] mremap implementation in C does not handle arguments correctly
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code